--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
+*.pyo
 *.so
 .Python
 build/
@@ -25,54 +27,102 @@ wheels/
 venv/
 ENV/
 env/
+.conda/
 
 # Environment Variables (CRITICAL - NEVER COMMIT)
 .env
 .env.local
 .env.production
+.env.staging
+config.ini
+secrets.yaml
 
-# Data & Cache
+# Data & Cache (Private flight logs)
 data/cache/
 data/temp/
 data/logs/
 data/uploads/
 data/results/
+data/raw/
+data/private/
 *.pkl
 *.joblib
+*.h5
+*.hdf5
 
-# IDE
+# Model Artifacts
+models/*.pkl
+models/*.joblib
+models/*.h5
+models/checkpoints/
+cache/
+*.model
+*.weights
+
+# Logs & Monitoring
+*.log
+logs/
+monitoring/
+metrics/
+
+# IDE & Editors
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+.sublime-*
+*.sublime-workspace
 
-# OS
+# OS Generated
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Docker
 .dockerignore
+docker-compose.override.yml
 
-# Logs
-*.log
-logs/
-
-# Model artifacts
-models/*.pkl
-models/*.joblib
-cache/
-
-# Jupyter
+# Jupyter Notebooks
 .ipynb_checkpoints/
+*.ipynb
 
-# Testing
+# Testing & Coverage
 .pytest_cache/
 .coverage
 htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
 
-# Security
+# Security & Certificates
 secrets/
 *.pem
 *.key
 *.crt
+*.p12
+*.pfx
+api_keys.txt
+credentials.json
+
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+temp/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Reports (generated during demo)
+reports/*.png
+reports/*.pdf
+reports/*.html
